// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
<View
  style={
    Object {
      "marginBottom": 15,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
  />
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "borderWidth": 1,
          "fontSize": 16,
          "marginVertical": 5,
          "padding": 10,
        },
        Object {
          "borderColor": "rgb(216, 216, 216)",
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
    value=""
  />
  <Text>
     
  </Text>
</View>
`;

exports[`TextInput renders correctly with label 1`] = `
<View
  style={
    Object {
      "marginBottom": 15,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
  >
    Test label
  </Text>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    style={
      Array [
        Object {
          "borderWidth": 1,
          "fontSize": 16,
          "marginVertical": 5,
          "padding": 10,
        },
        Object {
          "borderColor": "rgb(216, 216, 216)",
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
    value="Input value"
  />
  <Text>
     
  </Text>
</View>
`;

exports[`TextInput renders correctly with placeholder 1`] = `
<View
  style={
    Object {
      "marginBottom": 15,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 16,
        },
        Object {
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
  />
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Test placeholder"
    style={
      Array [
        Object {
          "borderWidth": 1,
          "fontSize": 16,
          "marginVertical": 5,
          "padding": 10,
        },
        Object {
          "borderColor": "rgb(255, 59, 48)",
          "color": "rgb(28, 28, 30)",
        },
      ]
    }
    value="test"
  />
  <Text
    style={
      Object {
        "color": "rgb(255, 59, 48)",
      }
    }
  >
    test
  </Text>
</View>
`;
